# LLAVM

./: .env  .gitignore  .gitmodules  README.md  code_notes.md  edits.md  hello.py  paper_docs.md  pyproject.toml  test_audio_tok.py  test_video.py
LLAVM_model/: data_processor.py  v2stoks.py
LLAVM_model/LLAVM_Scripts/: Audio2SemanticEmbedding.py  LazyDataset.py  Text2SemanticEmbedding.py  audio_projection.py  builder_projector.py  check_llava_size.py  constants.py  data_processor.py  llava_arch.py  llava_trainer.py  mm_utils.py  random1.py  test_embeddings.py  text_to_tokens.py  tokens_to_embeddings.py  train.py  v2stoks.py
data_gen/: check_dataset.py  check_sample_rate.py  create_new_dataset.py  create_new_dataset2.py  generate_oai.py  resample_audio.py
models/: audio_tokenizer.py
models_doc/: RQBottleneck.md  audio_tokenizer.py
models_modifiable/LLaVA-NeXT/llava/: constants.py  mm_utils.py
models_modifiable/LLaVA-NeXT/llava/model/: builder.py  llava_arch.py
models_modifiable/LLaVA-NeXT/llava/model/multimodal_encoder/: builder.py
models_modifiable/LLaVA-NeXT/llava/train/: train.py
models_modifiable/LLaVA-NeXT/scripts/train/: finetune_si.sh
