[project]
name = "llavm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
ependencies = []
dependencies = [
    "accelerate>=1.1.1",
    "bitsandbytes>=0.44.1",
    "datasets>=3.1.0",
    "decord>=0.6.0",
    "einops>=0.8.0",
    "einops-exts>=0.0.4",
    "fastapi>=0.115.5",
    "flash-attn>=2.7.0.post2",
    "gradio-client>=1.5.0",
    "hf-transfer>=0.1.8",
    "ipython>=8.30.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.3",
    "ninja>=1.11.1.2",
    "numpy>=2.0.2",
    "openai-whisper>=20240930",
    "opencv-python>=4.10.0.84",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "sentencepiece>=0.2.0",
    "timm>=1.0.11",
    "tokenizers==0.20.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "uvicorn>=0.32.1",
    "vector-quantize-pytorch>=1.20.10",
    "wandb>=0.18.7",
    "webdataset>=0.2.100",
    "whisperspeech>=0.8.9",
]
